changed direction to avoid being cut off on mobile

--- a/src/resources/sass/pages/konto-new/_spelkonto.scss
+++ b/src/resources/sass/pages/konto-new/_spelkonto.scss
@@ -170,6 +170,14 @@
                 display: none;
 
             }
+			@media screen and (max-width: 480px) {
+				flex-direction: column-reverse;
+				gap: 10px;
+
+				.btn {
+					width: 100%;
+				}
+			}
         }
     }
 }
